LIST OF CHANGES

 - Removed old team names from run add template
 - Made NovaSeq instruments skip wash statuses after completing a run, this
   does not affect statuses set manually through the UI.

release 92.2.0
 - Added singularity definition for the tracking web server.
 - Tracking web pages:
     added folder name column to run listing pages,
     added external instrument name to the instrument page.
 - Patched and refined a script for adding roles to users.

release 92.1.0
 - Change LDAP URL to read-only URL
 - Added a SOP for creating/decommitioning instruments.
 - Removed the samplesheet daemon definition npg_tracking::daemon::samplesheet
   and the auto-generator for samplesheets npg::daemon::samplesheet::auto.
   Both are no longer in use, the functionality was moved to
   https://github.com/wtsi-npg/npg_ml_warehouse, see
   https://github.com/wtsi-npg/npg_ml_warehouse/commit/0b98fc4defb8338914f8d11448df4b30cd75528c

release 92.0.0
 - Create 'primer_panel' alias for the 'gbs_plex_name' methods in
   st::api::lims. The new accessor will be used in contexts that are outside
   of processing GBS runs.
 - Remove the API wrapping around tracking XML API.
   This API has not been used in production for a long time. The part of it
   that links run id and batch id (npg::api::run) was used in tests. Tests
   are amended either to use samplesheets is a source of LIMS data or, where
   they are still using XML LIMS driver for st::api::lims, batch id is used
   explicitly.
   st::api::lims::xml previously had dependency on npg::api::run to allow          
   for retrieval of batch_id from run XML API in cases where it was not            
   supplied explicitly. This dependency is removed without changing the            
   public interface of the class. Formally speaking, the batch_id                  
   attribute remains optional for creating an instance of the class.               